creating the viewholder, configuring recyclerview with viewholder and ListAdapter instead of normal RecyclerView.Adapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AndroidRoomMVVM</string>
+    <string name="insert_martial_art_to_your_list">insert martial art to your list</string>
 </resources>
